--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <a href="#" class="logo"> <i class="fas fa-mug-hot"></i> coffee</a>
 
         <nav class="navbar">
-            <a href="home.html">home</a>
+            <a href="index.html">home</a>
             <a href="about.html" class="active">about</a>
             <a href="menu.html">menu</a>
             <a href="review.html">review</a>
@@ -111,8 +111,7 @@
 
         <div class="content">
             <h3>discover our passion for perfect coffee experience</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam quam odit natus qui 
-                quisquam dignissimos voluptatum nisi nostrum quos vitae dolorum velit, sunt unde.</p>
+            <p>At our cafe, every cup tells a story. Crafted with passion, each sip brings you closer to perfection, offering a blend of rich flavors and unforgettable moments.</p>
             <a href="#" class="btn"> our menu</a>    
         </div>
 
@@ -142,7 +141,7 @@
                     </div>
                     <div class="content">
                         <h3>coffee to go</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate porro.</p>
+                        <p>Grab your favorite coffee blend on the go, perfect for your busy lifestyle.</p>
                     </div>
                 </div>
 
@@ -152,7 +151,7 @@
                     </div>
                     <div class="content">
                         <h3>iced coffee</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate porro.</p>
+                        <p>Cool and refreshing, our iced coffee is the perfect treat on a hot day.</p>
                     </div>
                 </div>
 
@@ -162,7 +161,7 @@
                     </div>
                     <div class="content">
                         <h3>expresso</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate porro.</p>
+                        <p>Experience the bold and rich taste of our freshly brewed espresso shots.</p>
                     </div>
                 </div>
 
@@ -172,7 +171,7 @@
                     </div>
                     <div class="content">
                         <h3>biscuits</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate porro.</p>
+                        <p>Enjoy our delicious, freshly baked biscuits that perfectly complement your coffee.</p>
                     </div>
                 </div>
 
@@ -184,15 +183,7 @@
 
 
 
-
-
-
-
-
-
-
     <!-- coffee base section ends-->
-
 
 
     <!-- footer section starts -->
@@ -203,9 +194,8 @@
 
             <div class="box">
                 <h3><i class="fas fa-mug-hot"></i> coffee</h3>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> +123-456-7890</a>
-                <a href="#" class="links"> <i class="fas fa-envelope"></i> Webaddicted9@gmail.com</a>
-                <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> california, USA 43215</a>
+                <a href="#" class="links"> <i class="fas fa-phone"></i> +91 9911199111</a>
+                <a href="#" class="links"> <i class="fas fa-envelope"></i> wkjn09@gmail.com</a>
             </div>
 
             <div class="box">
@@ -238,7 +228,7 @@
 
         </div>
 
-        <div class="credit"> created by <span>Web Addicted </span> | all rights reserved! </div>
+        <div class="credit"> created by <span>@devangjain999</span> | all rights reserved! </div>
 
     </section>
 
