--- a/blogs.html
+++ b/blogs.html
@@ -18,7 +18,7 @@
         <a href="#" class="logo"> <i class="fas fa-mug-hot"></i> coffee</a>
 
         <nav class="navbar">
-            <a href="home.html">home</a>
+            <a href="index.html">home</a>
             <a href="about.html">about</a>
             <a href="menu.html">menu</a>
             <a href="review.html">review</a>
@@ -117,7 +117,7 @@
                         <a href="#"> <i class="fas fa-heart"></i> 56 million</a>
                     </div>
                     <h3>coffee chronicles: A rich brew of stories</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, quod!</p>
+                    <p>Enjoy a cup of coffee and explore stories brewed with passion and tradition.</p>
                     <a href="#" class="btn">read more</a>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                         <a href="#"> <i class="fas fa-heart"></i> 56 million</a>
                     </div>
                     <h3>coffee chronicles: A rich brew of stories</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, quod!</p>
+                    <p>Savor the aroma and dive into tales of coffee and connection.</p>
                     <a href="#" class="btn">read more</a>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                         <a href="#"> <i class="fas fa-heart"></i> 56 million</a>
                     </div>
                     <h3>coffee chronicles: A rich brew of stories</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, quod!</p>
+                    <p>Discover the art of coffee through stories in every sip.</p>
                     <a href="#" class="btn">read more</a>
                 </div>
             </div>
@@ -162,7 +162,7 @@
                         <a href="#"> <i class="fas fa-heart"></i> 56 million</a>
                     </div>
                     <h3>coffee chronicles: A rich brew of stories</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, quod!</p>
+                    <p>Experience the magic of coffee with stories that warm the soul. </p>
                     <a href="#" class="btn">read more</a>
                 </div>
             </div>
@@ -177,7 +177,7 @@
                         <a href="#"> <i class="fas fa-heart"></i> 56 million</a>
                     </div>
                     <h3>coffee chronicles: A rich brew of stories</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, quod!</p>
+                    <p>Every cup tells a story. Sip, relax, and enjoy the journey.</p>
                     <a href="#" class="btn">read more</a>
                 </div>
             </div>
@@ -192,7 +192,7 @@
                         <a href="#"> <i class="fas fa-heart"></i> 56 million</a>
                     </div>
                     <h3>coffee chronicles: A rich brew of stories</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, quod!</p>
+                    <p>Brewed with care, served with stories worth sharing.</p>
                     <a href="#" class="btn">read more</a>
                 </div>
             </div>
@@ -203,22 +203,7 @@
 
 
 
-
-
-
-
-
-
-
-
     <!-- blog section ends -->
-
-
-
-
-
-
-
 
 
     <!-- footer section starts -->
@@ -229,9 +214,9 @@
 
             <div class="box">
                 <h3><i class="fas fa-mug-hot"></i> coffee</h3>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> +123-456-7890</a>
-                <a href="#" class="links"> <i class="fas fa-envelope"></i> Webaddicted9@gmail.com</a>
-                <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> california, USA 43215</a>
+                <a href="#" class="links"> <i class="fas fa-phone"></i> +91 9911199111</a>
+                <a href="#" class="links"> <i class="fas fa-envelope"></i> wkjn09@gmail.com</a>
+                
             </div>
 
             <div class="box">
@@ -264,28 +249,11 @@
 
         </div>
 
-        <div class="credit"> created by <span> Web Addicted </span> | all rights reserved! </div>
+        <div class="credit"> created by <span>@devangjain999</span> | all rights reserved! </div>
 
     </section>
 
     <!-- footer section ends -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
