--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <a href="#" class="logo"> <i class="fas fa-mug-hot"></i> coffee</a>
 
         <nav class="navbar">
-            <a href="home.html">home</a>
+            <a href="index.html">home</a>
             <a href="about.html">about</a>
             <a href="menu.html">menu</a>
             <a href="review.html">review</a>
@@ -124,36 +124,12 @@
 
             </form>
 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3445.9293944930487!2d-97.7546682884772!3d30.267592874706946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b50e25cd8c2d%3A0x3fa3976be9ecaa5!2sMerit%20Coffee!5e0!3m2!1sen!2s!4v1709320735877!5m2!1sen!2s" width="550" allowfullscreen="" loading="lazy" class="map"></iframe>
-
         </div>
 
     </section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- contact us section ends -->
-
-
-
-
-
-
-
-
-
 
 
     <!-- footer section starts -->
@@ -164,9 +140,8 @@
 
             <div class="box">
                 <h3><i class="fas fa-mug-hot"></i> coffee</h3>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> +123-456-7890</a>
-                <a href="#" class="links"> <i class="fas fa-envelope"></i> Webaddicted9@gmail.com</a>
-                <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> california, USA 43215</a>
+                <a href="#" class="links"> <i class="fas fa-phone"></i> +91 9911199111</a>
+                <a href="#" class="links"> <i class="fas fa-envelope"></i> wkjn09@gmail.com</a>
             </div>
 
             <div class="box">
@@ -199,7 +174,7 @@
 
         </div>
 
-        <div class="credit"> created by <span> Web Addicted </span> | all rights reserved! </div>
+        <div class="credit"> created by <span>@devangjain999</span> | all rights reserved! </div>
 
     </section>
 
