--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#" class="logo"> <i class="fas fa-mug-hot"></i> coffee</a>
 
         <nav class="navbar">
-            <a href="home.html" class="active">home</a>
+            <a href="index.html" class="active">home</a>
             <a href="about.html">about</a>
             <a href="menu.html">menu</a>
             <a href="review.html">review</a>
@@ -98,7 +98,7 @@
 
         <div class="content">
             <h3>coffee creations</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti ab, voluptate neque at modi veritatis.</p>
+            <p>Discover our handcrafted coffee creations, made with love and passion for every cup. From bold flavors to smooth sips, find your perfect brew.</p>
             <a href="#" class="btn">Explore now </a>
         </div>
 
@@ -154,25 +154,25 @@
             <div class="box">
                 <img src="images/offer-1.png" alt="">
                 <h3>varieties of coffee</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum</p>
+                <p>Explore our rich selection of coffee blends, from bold espressos to smooth cappuccinos.</p>
             </div>
 
             <div class="box">
                 <img src="images/offer-2.png" alt="">
                 <h3>varieties of coffee</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum</p>
+                <p>Indulge in freshly roasted coffee beans, handpicked for their premium flavor.</p>
             </div>
 
             <div class="box">
                 <img src="images/offer-3.png" alt="">
                 <h3>varieties of coffee</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum</p>
+                <p>Pair your coffee with delicious pastries, crafted fresh every morning.</p>
             </div>
 
             <div class="box">
                 <img src="images/offer-4.png" alt="">
                 <h3>varieties of coffee</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum</p>
+                <p>Cool off with our refreshing iced coffee, perfect for any time of the day.</p>
             </div>
 
         </div>
@@ -189,9 +189,10 @@
 
             <div class="box">
                 <h3><i class="fas fa-mug-hot"></i> coffee</h3>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> +123-456-7890</a>
-                <a href="#" class="links"> <i class="fas fa-envelope"></i> Webaddicted9@gmail.com</a>
-                <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> california, USA 43215</a>
+                <a href="#" class="links"> <i class="fas fa-phone"></i> +91 9911199111</a>
+                <a href="#" class="links"> <i class="fas fa-envelope"></i> wkjn09@gmail.com</a>
+                
+
             </div>
 
             <div class="box">
@@ -223,40 +224,12 @@
             </div>
 
         </div>
-
-        <div class="credit"> created by <span> Web Addicted</span> | all rights reserved! </div>
+        <div class="credit"> created by <span>@devangjain999</span> | all rights reserved! </div>
 
     </section>
 
 
-
-
-
-
-
-
-
-
-
     <!-- footer section ends -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <script src="script.js"></script>
