--- a/review.html
+++ b/review.html
@@ -18,7 +18,7 @@
         <a href="#" class="logo"> <i class="fas fa-mug-hot"></i> coffee</a>
 
         <nav class="navbar">
-            <a href="home.html">home</a>
+            <a href="index.html">home</a>
             <a href="about.html">about</a>
             <a href="menu.html">menu</a>
             <a href="review.html" class="active">review</a>
@@ -121,7 +121,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta impedit, ducimus earum architecto numquam quis error itaque saepe blanditiis rem accusantium incidunt excepturi fuga nostrum magni, dolore tempore laboriosam repellat.</p>
+                <p>The rich aroma and perfect balance of flavors left me craving more. This is hands down the best coffee I’ve had!.</p>
             </div>
 
             <div class="box">
@@ -130,7 +130,7 @@
                     <img src="images/review-2.png" alt="" class="user">
                     <img src="images/quote-right.png" width="25" height="25" alt="">
                 </div>
-                <h3>john paul</h3>
+                <h3>sydney sweeney</h3>
                 <h4>satisfied client</h4>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -139,7 +139,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta impedit, ducimus earum architecto numquam quis error itaque saepe blanditiis rem accusantium incidunt excepturi fuga nostrum magni, dolore tempore laboriosam repellat.</p>
+                <p>Smooth, bold, and just the right amount of sweetness. Every cup feels like a mini vacation!.</p>
             </div>
 
             <div class="box">
@@ -157,7 +157,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta impedit, ducimus earum architecto numquam quis error itaque saepe blanditiis rem accusantium incidunt excepturi fuga nostrum magni, dolore tempore laboriosam repellat.</p>
+                <p> I’ve tried countless coffee brands, but nothing comes close to the depth and quality of this one. Simply outstanding.</p>
             </div>
 
             <div class="box">
@@ -166,7 +166,7 @@
                     <img src="images/review-4.png" alt="" class="user">
                     <img src="images/quote-right.png" width="25" height="25" alt="">
                 </div>
-                <h3>john paul</h3>
+                <h3>sydney sweeney</h3>
                 <h4>satisfied client</h4>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -175,7 +175,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta impedit, ducimus earum architecto numquam quis error itaque saepe blanditiis rem accusantium incidunt excepturi fuga nostrum magni, dolore tempore laboriosam repellat.</p>
+                <p> Perfect for the morning! The rich texture and strong flavor are exactly what I need to start my day.</p>
             </div>
 
             <div class="box">
@@ -193,7 +193,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta impedit, ducimus earum architecto numquam quis error itaque saepe blanditiis rem accusantium incidunt excepturi fuga nostrum magni, dolore tempore laboriosam repellat.</p>
+                <p>Every sip of this coffee feels like a luxurious experience. It's crafted to perfection with every cup.</p>
             </div>
 
             <div class="box">
@@ -202,7 +202,7 @@
                     <img src="images/review-6.png" alt="" class="user">
                     <img src="images/quote-right.png" width="25" height="25" alt="">
                 </div>
-                <h3>john paul</h3>
+                <h3>sydney sweeney</h3>
                 <h4>satisfied client</h4>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -211,7 +211,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta impedit, ducimus earum architecto numquam quis error itaque saepe blanditiis rem accusantium incidunt excepturi fuga nostrum magni, dolore tempore laboriosam repellat.</p>
+                <p>This coffee delivers a delightful blend of smoothness and richness, making every cup a moment to savor.</p>
             </div>
 
         </div>
@@ -219,28 +219,7 @@
     </section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- review section ends -->
-
-
-
-
-
-
-
-
 
 
     <!-- footer section starts -->
@@ -251,9 +230,9 @@
 
             <div class="box">
                 <h3><i class="fas fa-mug-hot"></i> coffee</h3>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> +123-456-7890</a>
-                <a href="#" class="links"> <i class="fas fa-envelope"></i> Webaddicted9@gmail.com</a>
-                <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> california, USA 43215</a>
+                <a href="#" class="links"> <i class="fas fa-phone"></i> +91 9911199111</a>
+                <a href="#" class="links"> <i class="fas fa-envelope"></i> wkjn09@gmail.com</a>
+                
             </div>
 
             <div class="box">
@@ -286,29 +265,11 @@
 
         </div>
 
-        <div class="credit"> created by <span> Web Addicted</span> | all rights reserved! </div>
+        <div class="credit"> created by <span>@devangjain999</span> | all rights reserved! </div>
 
     </section>
 
     <!-- footer section ends -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <script src="script.js"></script>
