--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
         <a href="#" class="logo"> <i class="fas fa-mug-hot"></i> coffee</a>
 
         <nav class="navbar">
-            <a href="home.html">home</a>
+            <a href="index.html">home</a>
             <a href="about.html">about</a>
             <a href="menu.html" class="active">menu</a>
             <a href="review.html">review</a>
@@ -243,22 +243,7 @@
     </section>
 
 
-
-
-
-
-
-
-
-
     <!-- menu section ends -->
-
-
-
-
-
-
-
 
 
     <!-- footer section starts -->
@@ -269,9 +254,9 @@
 
             <div class="box">
                 <h3><i class="fas fa-mug-hot"></i> coffee</h3>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> +123-456-7890</a>
-                <a href="#" class="links"> <i class="fas fa-envelope"></i> Webaddicted9@gmail.com</a>
-                <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> california, USA 43215</a>
+                <a href="#" class="links"> <i class="fas fa-phone"></i> +91 9911199111</a>
+                <a href="#" class="links"> <i class="fas fa-envelope"></i>wkjn09@gmail.com</a>
+                
             </div>
 
             <div class="box">
@@ -304,7 +289,7 @@
 
         </div>
 
-        <div class="credit"> created by <span> Web Addicted</span> | all rights reserved! </div>
+        <div class="credit"> created by <span>@devangjain999</span> | all rights reserved! </div>
 
     </section>
 
